	* Initialize module csh file and test configuration with a few labels.
	* Add item 'dmail' on column 'module' of table 'pages' in ext_tables.php (pending removal from typo3/sysext/cms/ext_tables.php)
	* Add methods find_MIDfromReturnPath and find_XTypo3MID in mod/class.readmail.php (pending removal from t3lib/class.t3lib_readmail.php)
	* Update to manual and contextual help.

2007-03-04 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Add copy of the static templates in the manual.
	* Change English language labels of Direct Mail Group to Recipient list.
	* Adjust a few more TCA labels.
	* Update recipient list section of manual.
	* Complete csh help in English and French for sys_dmail_group table.

2007-03-03 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Update to the manual.

2007-03-01 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Add dependency on TYPO3 4.0.0 in ext_emconf.php.
	* Update the Configuration section of the manual, including conversion.
	* Change the module form from "mediumDoc" to "template".

2006-02-28 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Update structure of manual.
	* Delete locallang.php files.
	* Clean up mailSelect class
	* Make special query mail group basically work.

2006-02-27 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Correct return address from backend form to directMail defaultView; in some cases was creating a new record based on same page!
	* Add flowedFormat option for plain text content (Page TSConfig in BE and TS setup of plain text rendering plugin).
	* Eliminate references to $HTTP_POST_VARS in mod_web_dmail class.
	* Disable categories assignment fields on backend forms by default. Need to be added through Page TsConfig.
	* Update manual section: "Configuring the use of categories".
	* Light cleanup on boundaries.
	* Convert locallang files to xml format.

2006-02-26 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>